--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation files('libs/gumtree-all.jar')
     implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.25.1'
     implementation 'com.github.javaparser:javaparser-core:3.25.1'
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
 
 sourceCompatibility = 1.8
