--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,9 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
-    implementation files('libs/gumtree-all.jar')
-    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.25.1'
-    implementation 'com.github.javaparser:javaparser-core:3.25.1'
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'org.ow2.asm:asm:9.5'
+    implementation 'org.ow2.asm:asm-tree:9.5'
 }
 
 sourceCompatibility = 1.8
